--- a/css/prism.css
+++ b/css/prism.css
@@ -171,14 +171,21 @@ html {
 }
 
 body {
-	width: 1036px;
+	width: 1048px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 header {
 	padding: 0;
+	padding-bottom: 1em;
 	margin: 0;
 	text-align: center;
-	line-height: 1;
+	line-height: 75%;
+	white-space: normal;
+}
+
+header span.fa {
+	line-height: 1.5;
+	width: 2em;
 }
