--- a/css/prism.css
+++ b/css/prism.css
@@ -1,4 +1,4 @@
-/* http://prismjs.com/download.html?themes=prism-okaidia&languages=clike+javascript&plugins=line-numbers */
+/* http://prismjs.com/download.html?themes=prism-okaidia&languages=clike+javascript&plugins=line-numbers+highlight-keywords */
 /**
  * okaidia theme for JavaScript, CSS and HTML
  * Loosely based on Monokai textmate theme by http://www.monokai.nl/
@@ -6,68 +6,61 @@
  */
 
 code[class*="language-"],
-pre[class*="language-"],
-header,
-.container {
-  color: #f8f8f2;
-  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-  font-size: 120%;
-  direction: ltr;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
+pre[class*="language-"] {
+	color: #f8f8f2;
+	background: none;
+	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	word-wrap: normal;
+	line-height: 1.5;
 
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
 
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
 }
 
 /* Code blocks */
-pre[class*="language-"],
-header,
-.container {
-  padding: 1em;
-  margin: .5em 0;
-  overflow: auto;
-  border-radius: 0.3em;
+pre[class*="language-"] {
+	padding: 1em;
+	margin: .5em 0;
+	overflow: auto;
+	border-radius: 0.3em;
 }
 
 :not(pre) > code[class*="language-"],
-pre[class*="language-"],
-header,
-.container {
-  background: #272822;
+pre[class*="language-"] {
+	background: #272822;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-  padding: .1em;
-  border-radius: .3em;
-  white-space: normal;
+	padding: .1em;
+	border-radius: .3em;
+	white-space: normal;
 }
 
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: slategray;
+	color: slategray;
 }
 
 .token.punctuation {
-  color: #f8f8f2;
+	color: #f8f8f2;
 }
 
 .namespace {
-  opacity: .7;
+	opacity: .7;
 }
 
 .token.property,
@@ -75,12 +68,12 @@ header,
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: #f92672;
+	color: #f92672;
 }
 
 .token.boolean,
 .token.number {
-  color: #ae81ff;
+	color: #ae81ff;
 }
 
 .token.selector,
@@ -89,7 +82,7 @@ header,
 .token.char,
 .token.builtin,
 .token.inserted {
-  color: #a6e22e;
+	color: #a6e22e;
 }
 
 .token.operator,
@@ -98,126 +91,73 @@ header,
 .language-css .token.string,
 .style .token.string,
 .token.variable {
-  color: #f8f8f2;
+	color: #f8f8f2;
 }
 
 .token.atrule,
 .token.attr-value,
 .token.function {
-  color: #e6db74;
+	color: #e6db74;
 }
 
 .token.keyword {
-  color: #66d9ef;
+	color: #66d9ef;
 }
 
 .token.regex,
 .token.important {
-  color: #fd971f;
+	color: #fd971f;
 }
 
 .token.important,
 .token.bold {
-  font-weight: bold;
+	font-weight: bold;
 }
 .token.italic {
-  font-style: italic;
+	font-style: italic;
 }
 
 .token.entity {
-  cursor: help;
+	cursor: help;
 }
 
 pre.line-numbers {
-  position: relative;
-  padding-left: 3.8em;
-  counter-reset: linenumber;
+	position: relative;
+	padding-left: 3.8em;
+	counter-reset: linenumber;
 }
 
 pre.line-numbers > code {
-  position: relative;
+	position: relative;
 }
 
 .line-numbers .line-numbers-rows {
-  position: absolute;
-  pointer-events: none;
-  top: 0;
-  font-size: 100%;
-  left: -3.8em;
-  width: 3em; /* works for line-numbers below 1000 lines */
-  letter-spacing: -1px;
-  border-right: 1px solid #999;
+	position: absolute;
+	pointer-events: none;
+	top: 0;
+	font-size: 100%;
+	left: -3.8em;
+	width: 3em; /* works for line-numbers below 1000 lines */
+	letter-spacing: -1px;
+	border-right: 1px solid #999;
 
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 
 }
 
-  .line-numbers-rows > span {
-    pointer-events: none;
-    display: block;
-    counter-increment: linenumber;
-  }
+	.line-numbers-rows > span {
+		pointer-events: none;
+		display: block;
+		counter-increment: linenumber;
+	}
 
-    .line-numbers-rows > span:before {
-      content: counter(linenumber);
-      color: #999;
-      display: block;
-      padding-right: 0.8em;
-      text-align: right;
-    }
-
-html {
-  background-color: #000;
-}
-
-body {
-  width: 1048px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-header {
-  padding: 0;
-  padding-bottom: 1em;
-  margin: 0;
-  text-align: center;
-  line-height: 75%;
-  white-space: normal;
-}
-
-header span.fa {
-  line-height: 1.5;
-  width: 2em;
-}
-
-.container {
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-  line-height: 1em;
-}
-
-#canvas,
-#controls {
-  border: 1px solid black;
-  background-color: black;
-}
-
-#canvas {
-  float: left;
-}
-
-#controls {
-  width: 300px;
-  height: 600px;
-  float: right;
-  margin-top: -29px;
-  text-align: left;
-}
-
-input[type="number"] {
-   width: 65px;
-}
+		.line-numbers-rows > span:before {
+			content: counter(linenumber);
+			color: #999;
+			display: block;
+			padding-right: 0.8em;
+			text-align: right;
+		}
