Overhaul graphics and background images

--- a/css/custom.css
+++ b/css/custom.css
@@ -30,3 +30,12 @@ input[type="number"] {
   color: #000;
    width: 65px;
 }
+
+/* background for projects & about me sections */
+#projects {
+  background: transparent url("../img/projects_tile.jpg");
+}
+
+#about-me {
+  background: transparent url("../img/about_me_tile.jpg");
+}
